major reworking of unit tests
should be easier to add new examples/tests